# Cpp_PatientDatabaseCLI

./: .gitignore  CMakeLists.txt  README.md  ci-pipeline.ps1  ci.yml  report.xml
data/: patients.csv
dev/: UML_TDD.drawio
src/: CMakeLists.txt  HealthInfoFileRepository.cpp  HealthInfoFileRepository.h  Menu.cpp  Patient.cpp  Patient.h  PatientFileRepository.cpp  PatientFileRepository.h  PatientService.cpp  PatientService.h  Validator.h  main.cpp
src/cli/: Menu.cpp  Menu.h  PatientInputCollector.cpp  PatientInputCollector.h  PatientPrinter.cpp  PatientPrinter.h
src/domain/: IRepository.h  Patient.cpp  Patient.h
src/infrastructure/: CsvPatientRepository.cpp  CsvPatientRepository.h  CsvReader.h  CsvWriter.h
src/services/: PatientService.cpp  PatientService.h
src/validation/: Validator.cpp  Validator.h
test-report/: report.xml
test-report/tests/: report.xml
tests/: AllTests.cpp  CMakeLists.txt  PatientTest.cpp  README.md  TestData.h  TestHelpers.h
tests/integration/: DeletePatientDataFromCsvFile.cpp  EditPatientDataInCsvFile.cpp  ReadPatientDataFromCsvFile.cpp  SavePatientDataToCsvFile.cpp
tests/regression/: CheckIfCsvFileCanBeRead.cpp
tests/system/: RunMenuTest.cpp
tests/unit/: PatientInputCollectorTest.cpp  PatientPrinterTest.cpp  PatientTest.cpp  ValidatorTest.cpp
